--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,14 @@
 *.war
 *.ear
 
+# eclipse setting file
+.settings
+
+# 
+.project
+/bin/
+
+/target/
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
