--- a/core/pom.xml
+++ b/core/pom.xml
@@ -19,6 +19,14 @@
 		<artifactId>commons-lang</artifactId>
 		<version>2.6</version>
 	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/org.rxtx/rxtx -->
+	<dependency>
+		<groupId>org.rxtx</groupId>
+		<artifactId>rxtx</artifactId>
+		<version>2.2pre2</version>
+	</dependency>
+
     		
   </dependencies>
 </project>
